<resources>
    <string name="app_name">PM Kisan Yojana Admin</string>
    <string name="show_immediately">Show Immediately</string>
    <string name="set_schedule">Set Schedule</string>
    <string name="enter_yojana">Enter Yojana</string>
    <string name="enter_link">Enter Link</string>
    <string name="select_yojana">Select Yojana</string>
    <string name="yajana">Yajana</string>
    <string name="enter_title">Enter Name</string>
    <string name="hin">Hin</string>
    <string name="eng">Eng</string>
    <string name="upload_quiz_questions">Upload Quiz Question</string>
    <string name="enter_question">Enter Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="answer">answer</string>
    <string name="upload">upload</string>
    <string name="edit_and_delete_quiz">Edit and Delete Quiz</string>
    <string name="edit_and_delete_others">Edit and Delete Others</string>
    <string name="edit_and_delete_news">Edit and Delete News</string>
    <string name="edit_and_delete_yojana">Edit and Delete Yojana</string>
    <string name="banner_id">Banner id</string>
    <string name="interstitial_id">Interstitial id</string>
    <string name="native_id">Native id</string>
    <string name="update_ad_id">Update ad ids</string>
    <string name="update_ads_id_2">Update Ads Id 2</string>
    <string name="app_open">app open</string>
    <string name="app_id">App Id</string>
</resources>